--- a/restaurant.html
+++ b/restaurant.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
-    <link type="image/png" sizes="96x96" rel="icon" href=".../icons8-cafe-96.png">
+<!--     <link type="image/png" sizes="96x96" rel="icon" href=".../icons8-cafe-96.png"> -->
     <link rel="stylesheet" href="swiper-bundle.min.css" />
     <link rel="stylesheet" href="restaurant.css">
     <link rel="stylesheet" href="res_responsive.css">
