--- a/restaurant.html
+++ b/restaurant.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>S-Den's</title>
-    <link rel="shortcut icon" href="icons8-cafe-96.png" type="image/x-icon">
+        <link type="image/png" sizes="96x96" rel="icon" href=".../icons8-cafe-96.png">
+<!--     <link rel="shortcut icon" href="icons8-cafe-96.png" type="image/x-icon"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -14,7 +15,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
-<!--     <link type="image/png" sizes="96x96" rel="icon" href=".../icons8-cafe-96.png"> -->
+
     <link rel="stylesheet" href="swiper-bundle.min.css" />
     <link rel="stylesheet" href="restaurant.css">
     <link rel="stylesheet" href="res_responsive.css">
